--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "eva-icons": "^1.1.3",
     "monaco-editor": "^0.20.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
     "react": "^16.13.1",
@@ -18,6 +19,7 @@
     "react-dropzone": "^11.2.0",
     "react-monaco-editor": "^0.40.0",
     "react-scripts": "3.4.3",
+    "react-tooltip": "^4.2.10",
     "typescript": "~3.7.2",
     "wasm2wat": "./wasm2wat/pkg"
   },
