--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "eva-icons": "^1.1.3",
+    "file-saver": "^2.0.2",
     "monaco-editor": "^0.20.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
     "react": "^16.13.1",
@@ -21,6 +22,7 @@
     "react-scripts": "3.4.3",
     "react-tooltip": "^4.2.10",
     "typescript": "~3.7.2",
+    "wasm-remapper": "./wasm-remapper/pkg",
     "wasm2wat": "./wasm2wat/pkg"
   },
   "scripts": {
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.1",
     "react-app-rewired": "^2.1.6",
     "wasm-loader": "^1.3.0"
   }
