--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -19,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
     "react-monaco-editor": "^0.40.0",
+    "react-resize-detector": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-tooltip": "^4.2.10",
     "typescript": "~3.7.2",
@@ -48,6 +50,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.1",
+    "@types/react-resize-detector": "^5.0.0",
     "react-app-rewired": "^2.1.6",
     "wasm-loader": "^1.3.0"
   }
